// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout header behavior should allow for any children to be rendered after the title with the appBarProps 1`] = `
<div>
  <a
    class="rmd-link rmd-link-skip rmd-link-skip--styled"
    href="#layout-main"
    id="skip-to-main-content"
  >
    Skip to main content
  </a>
  <div
    aria-label="Navigation"
    class="rmd-dialog rmd-sheet rmd-sheet--horizontal rmd-sheet--left rmd-sheet--media-width rmd-layout-navigation"
    id="layout-nav-container"
    tabindex="-1"
  >
    <header
      class="rmd-app-bar rmd-app-bar--normal rmd-layout-nav-header rmd-layout-nav-header--bordered"
    />
  </div>
  <header
    class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--normal rmd-app-bar--fixed rmd-app-bar--top rmd-app-bar--fixed-elevation"
    id="layout-header"
  >
    <h6
      class="rmd-app-bar__title rmd-app-bar__title--no-wrap rmd-app-bar__title--inherit rmd-layout-title rmd-layout-title--offset"
      id="layout-title"
    >
      My Title
    </h6>
    <span>
      Other Children
    </span>
  </header>
  <main
    class="rmd-layout-main rmd-layout-main--header-offset rmd-layout-main--nav-offset"
    id="layout-main"
  />
</div>
`;

exports[`Layout header behavior should allow for any children to be rendered after the title with the appBarProps 2`] = `
<div>
  <a
    class="rmd-link rmd-link-skip rmd-link-skip--styled"
    href="#layout-main"
    id="skip-to-main-content"
  >
    Skip to main content
  </a>
  <div
    aria-label="Navigation"
    class="rmd-dialog rmd-sheet rmd-sheet--horizontal rmd-sheet--left rmd-sheet--media-width rmd-layout-navigation"
    id="layout-nav-container"
    tabindex="-1"
  >
    <header
      class="rmd-app-bar rmd-app-bar--normal rmd-layout-nav-header rmd-layout-nav-header--bordered"
    />
  </div>
  <header
    class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--normal rmd-app-bar--fixed rmd-app-bar--top rmd-app-bar--fixed-elevation"
    id="layout-header"
  >
    <h6
      class="rmd-app-bar__title rmd-app-bar__title--no-wrap rmd-app-bar__title--inherit rmd-layout-title rmd-layout-title--offset"
      id="layout-title"
    >
      <span>
        Updated Title
      </span>
    </h6>
    <button
      aria-label="Light Theme"
      class="rmd-button rmd-button--icon rmd-app-bar__action rmd-app-bar__action--first rmd-app-bar__action--last rmd-app-bar__action--inherit"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="rmd-icon rmd-icon--svg"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 21c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-1H9v1zm3-19C8.14 2 5 5.14 5 9c0 2.38 1.19 4.47 3 5.74V17c0 .55.45 1 1 1h6c.55 0 1-.45 1-1v-2.26c1.81-1.27 3-3.36 3-5.74 0-3.86-3.14-7-7-7zm2.85 11.1l-.85.6V16h-4v-2.3l-.85-.6C7.8 12.16 7 10.63 7 9c0-2.76 2.24-5 5-5s5 2.24 5 5c0 1.63-.8 3.16-2.15 4.1z"
        />
      </svg>
      <span
        class="rmd-ripple-container"
      />
    </button>
  </header>
  <main
    class="rmd-layout-main rmd-layout-main--header-offset rmd-layout-main--nav-offset"
    id="layout-main"
  />
</div>
`;

exports[`Layout header behavior should render the \`title\` prop as the main title 1`] = `
<div>
  <a
    class="rmd-link rmd-link-skip rmd-link-skip--styled"
    href="#layout-main"
    id="skip-to-main-content"
  >
    Skip to main content
  </a>
  <div
    aria-label="Navigation"
    class="rmd-dialog rmd-sheet rmd-sheet--horizontal rmd-sheet--left rmd-sheet--media-width rmd-layout-navigation"
    id="layout-nav-container"
    tabindex="-1"
  >
    <header
      class="rmd-app-bar rmd-app-bar--normal rmd-layout-nav-header rmd-layout-nav-header--bordered"
    />
  </div>
  <header
    class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--normal rmd-app-bar--fixed rmd-app-bar--top rmd-app-bar--fixed-elevation"
    id="layout-header"
  >
    <h6
      class="rmd-app-bar__title rmd-app-bar__title--no-wrap rmd-app-bar__title--inherit rmd-layout-title rmd-layout-title--offset"
      id="layout-title"
    >
      My Title
    </h6>
  </header>
  <main
    class="rmd-layout-main rmd-layout-main--header-offset rmd-layout-main--nav-offset"
    id="layout-main"
  />
</div>
`;

exports[`Layout header behavior should render the \`title\` prop as the main title 2`] = `
<div>
  <a
    class="rmd-link rmd-link-skip rmd-link-skip--styled"
    href="#layout-main"
    id="skip-to-main-content"
  >
    Skip to main content
  </a>
  <div
    aria-label="Navigation"
    class="rmd-dialog rmd-sheet rmd-sheet--horizontal rmd-sheet--left rmd-sheet--media-width rmd-layout-navigation"
    id="layout-nav-container"
    tabindex="-1"
  >
    <header
      class="rmd-app-bar rmd-app-bar--normal rmd-layout-nav-header rmd-layout-nav-header--bordered"
    />
  </div>
  <header
    class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--normal rmd-app-bar--fixed rmd-app-bar--top rmd-app-bar--fixed-elevation"
    id="layout-header"
  >
    <h6
      class="rmd-app-bar__title rmd-app-bar__title--no-wrap rmd-app-bar__title--inherit rmd-layout-title rmd-layout-title--offset"
      id="layout-title"
    >
      <span
        data-testid="custom"
      >
        This is a custom title
      </span>
    </h6>
  </header>
  <main
    class="rmd-layout-main rmd-layout-main--header-offset rmd-layout-main--nav-offset"
    id="layout-main"
  />
</div>
`;

exports[`Layout item render behavior should be able to render links, subheaders, and dividers 1`] = `
<nav
  class="rmd-layout-nav rmd-layout-nav--grow"
  id="layout-navigation-tree-nav"
>
  <ul
    aria-activedescendant=""
    aria-label="Navigation"
    class="rmd-list rmd-tree rmd-layout-tree"
    id="layout-navigation-tree"
    role="tree"
    tabindex="0"
  >
    <li
      class="rmd-tree-item"
      role="none"
    >
      <a
        aria-level="1"
        aria-posinset="1"
        aria-setsize="3"
        class="rmd-link rmd-tree-item__content rmd-tree-item__content--link rmd-tree-item__content--clickable rmd-tree-item__content--selected"
        href="/"
        id="layout-navigation-tree-item-1"
        role="treeitem"
        tabindex="-1"
      >
        <span
          class="rmd-list-item__text"
        >
          Home
        </span>
        <span
          class="rmd-ripple-container"
        />
      </a>
    </li>
    <hr
      class="rmd-divider"
      role="separator"
    />
    <li
      class="rmd-list-subheader"
      role="none"
    >
      Subheader
    </li>
  </ul>
</nav>
`;

exports[`Layout mini variant should display only valid nav items at the root in the mini variant 1`] = `
<div
  aria-label="Navigation"
  class="rmd-dialog rmd-sheet rmd-sheet--horizontal rmd-sheet--left rmd-sheet--media-width rmd-layout-navigation rmd-layout-navigation--mini"
  id="layout-mini-nav-container"
  tabindex="-1"
>
  <nav
    class="rmd-layout-nav rmd-layout-nav--grow"
    id="layout-navigation-tree-nav"
  >
    <ul
      aria-activedescendant=""
      aria-label="Navigation"
      class="rmd-list rmd-tree rmd-layout-tree"
      id="layout-navigation-tree"
      role="tree"
      tabindex="0"
    >
      <li
        class="rmd-tree-item"
        role="none"
      >
        <a
          aria-level="1"
          aria-posinset="1"
          aria-setsize="6"
          class="rmd-link rmd-tree-item__content rmd-tree-item__content--link rmd-tree-item__content--clickable rmd-tree-item__content--selected rmd-layout-nav__mini-item"
          id="layout-navigation-tree-item-1"
          role="treeitem"
          tabindex="-1"
          to="/"
        >
          <svg
            aria-hidden="true"
            class="rmd-icon rmd-icon--svg"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
            />
          </svg>
          <span
            class="rmd-typography rmd-typography--body-1 rmd-sr-only"
          >
            Home
          </span>
          <span
            class="rmd-ripple-container"
          />
        </a>
      </li>
      <li
        class="rmd-tree-item"
        role="none"
      >
        <a
          aria-level="1"
          aria-posinset="2"
          aria-setsize="6"
          class="rmd-link rmd-tree-item__content rmd-tree-item__content--link rmd-tree-item__content--clickable rmd-layout-nav__mini-item"
          id="layout-navigation-tree-item-2"
          role="treeitem"
          tabindex="-1"
          to="/route-1"
        >
          <svg
            aria-hidden="true"
            class="rmd-icon rmd-icon--svg"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
            />
          </svg>
          <span
            class="rmd-typography rmd-typography--body-1 rmd-sr-only"
          >
            Route 1
          </span>
          <span
            class="rmd-ripple-container"
          />
        </a>
      </li>
      <hr
        class="rmd-divider"
        role="separator"
      />
      <li
        class="rmd-tree-item"
        role="none"
      >
        <a
          aria-level="1"
          aria-posinset="5"
          aria-setsize="6"
          class="rmd-link rmd-tree-item__content rmd-tree-item__content--link rmd-tree-item__content--clickable rmd-layout-nav__mini-item"
          id="layout-navigation-tree-item-5"
          role="treeitem"
          tabindex="-1"
          to="/route-3"
        >
          <svg
            aria-hidden="true"
            class="rmd-icon rmd-icon--svg"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7zm-3-9h3.63L9 15.2V17h6v-2h-3.63L15 10.8V9H9v2z"
            />
          </svg>
          <span
            class="rmd-typography rmd-typography--body-1 rmd-sr-only"
          >
            Route 3
          </span>
          <span
            class="rmd-ripple-container"
          />
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
